[package]
name = "actix-dome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.2"
actix-files = "0.6.2"
actix-web = "4.1.0"
derive_more = "0.99.17"
exitcode = "1.1.2"
futures-util = { version = "0.3.24", default-features = false, features = [
  "std",
] }
lettre = "0.10.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.1", features = ["runtime-actix-native-tls", "mysql"] }
toml = "0.5.9"
validator = { version = "0.16.0", features = ["derive"] }
