[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
error-chain = "0.12.4"
lazy_static = "1.4.0"
regex = "1.6.0"
ring = "0.16.20"
pnet = "0.31.0"
pnet_transport = "0.31.0"
anyhow = "1.0.64"
rand = "0.8.5"
clap = { version = "3.2.20", features = ["derive"] }
photon-rs = "0.3.1"
