[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
mini-redis = "0.4.1"
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = "0.1.9"

[[example]]
name = "fuck-redis"
path = "examples/fuck-redis.rs"
